# gzzpanel

./: .anjuta_sym_db.db  .gitignore  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.ac  depends  description-pak  gzzpanel.desktop  gzzpanel_0.1-gzz-1_i386.deb  gzzpanel_1.0-gzz-1_i386.deb  gzzpanel_1.0.1-gzz-1_i386.deb  gzzpanel_1.0.10-gzz-1_i386.deb  gzzpanel_1.0.11-gzz-1_i386.deb  gzzpanel_1.0.12-gzz-1_i386.deb  gzzpanel_1.0.13-gzz-1_i386.deb  gzzpanel_1.0.14-gzz-1_i386.deb  gzzpanel_1.0.15-gzz-1_i386.deb  gzzpanel_1.0.16-gzz-1_i386.deb  gzzpanel_1.0.17-gzz-1_i386.deb  gzzpanel_1.0.18-gzz-1_i386.deb  gzzpanel_1.0.19-gzz-1_i386.deb  gzzpanel_1.0.2-gzz-1_i386.deb  gzzpanel_1.0.20-gzz-1_i386.deb  gzzpanel_1.0.21-gzz-1_i386.deb  gzzpanel_1.0.22-gzz-1_i386.deb  gzzpanel_1.0.23-gzz-1_i386.deb  gzzpanel_1.0.3-gzz-1_i386.deb  gzzpanel_1.0.4-gzz-1_i386.deb  gzzpanel_1.0.5-gzz-1_i386.deb  gzzpanel_1.0.6-gzz-1_i386.deb  gzzpanel_1.0.7-gzz-1_i386.deb  gzzpanel_1.0.8-gzz-1_i386.deb  gzzpanel_1.0.9-gzz-1_i386.deb  gzzpanel_2.0-amd64-1_amd64.deb  gzzpanel_2.1.0-1_amd64.deb  (+15 more)
Debug/: Makefile  config.h  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  gzzpanel  libwnckmm.la
Debug/src/.deps/: applet.Plo  gzzpanel-applet.Po  gzzpanel-lvt.Po  gzzpanel-main.Po  gzzpanel-mainwindow.Po  gzzpanel-prefs.Po  gzzpanel-runapp.Po  gzzpanel-task.Po  gzzpanel-taskbar.Po  gzzpanel-wnck-action-menu.Po  gzzpanel-wnck-application.Po  gzzpanel-wnck-class-group.Po  gzzpanel-wnck-pager.Po  gzzpanel-wnck-screen.Po  gzzpanel-wnck-tasklist.Po  gzzpanel-wnck-window.Po  gzzpanel-wnck-workspace.Po  gzzpanel-wrap_init.Po  libwnckmm_la-applet.Plo  libwnckmm_la-task.Plo  libwnckmm_la-taskbar.Plo  libwnckmm_la-wnck-action-menu.Plo  libwnckmm_la-wnck-application.Plo  libwnckmm_la-wnck-class-group.Plo  libwnckmm_la-wnck-pager.Plo  libwnckmm_la-wnck-screen.Plo  libwnckmm_la-wnck-tasklist.Plo  libwnckmm_la-wnck-window.Plo  libwnckmm_la-wnck-workspace.Plo  libwnckmm_la-wrap_init.Plo
Debug/src/.libs/: libwnckmm.lai  libwnckmm.so.0.0.0
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  applet.cc  applet.h  common.h  gzzpanel.ui  libwnckmm.la  libwnckmm.pc.in  lvt.cc  main.cc  mainwindow.cc  mainwindow.h  prefs.cc  prefs.h  runapp.cc  runapp.h  task.cc  task.h  taskbar.cc  taskbar.h  wnck-action-menu.cc  wnck-action-menu.h  wnck-application.cc  wnck-application.h  wnck-class-group.cc  wnck-class-group.h  wnck-pager.cc  wnck-pager.h  wnck-screen.cc  wnck-screen.h  wnck-tasklist.cc  wnck-tasklist.h  wnck-window.cc  wnck-window.h  wnck-workspace.cc  wnck-workspace.h  wrap_init.cc  wrap_init.h
src/.deps/: gzzpanel-applet.Po  gzzpanel-lvt.Po  gzzpanel-main.Po  gzzpanel-mainwindow.Po  gzzpanel-prefs.Po  gzzpanel-runapp.Po  gzzpanel-task.Po  gzzpanel-taskbar.Po  gzzpanel-wnck-action-menu.Po  gzzpanel-wnck-application.Po  gzzpanel-wnck-class-group.Po  gzzpanel-wnck-pager.Po  gzzpanel-wnck-screen.Po  gzzpanel-wnck-tasklist.Po  gzzpanel-wnck-window.Po  gzzpanel-wnck-workspace.Po  gzzpanel-wrap_init.Po  libwnckmm_la-applet.Plo  libwnckmm_la-task.Plo  libwnckmm_la-taskbar.Plo  libwnckmm_la-wnck-action-menu.Plo  libwnckmm_la-wnck-application.Plo  libwnckmm_la-wnck-class-group.Plo  libwnckmm_la-wnck-pager.Plo  libwnckmm_la-wnck-screen.Plo  libwnckmm_la-wnck-tasklist.Plo  libwnckmm_la-wnck-window.Plo  libwnckmm_la-wnck-workspace.Plo  libwnckmm_la-wrap_init.Plo
src/.libs/: libwnckmm.la  libwnckmm.lai  libwnckmm.so.0.0.0
src/private/: wnck-application_p.h  wnck-class-group_p.h  wnck-screen_p.h  wnck-tasklist_p.h  wnck-window_p.h  wnck-workspace_p.h
